--- a/SimpleHttpServer/.classpath
+++ b/SimpleHttpServer/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="C:/Users/Lenovo/Downloads/jackson-annotations-2.5.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Lenovo/Downloads/jackson-core-2.5.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Lenovo/Downloads/jackson-databind-2.5.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Lenovo/Documents/understanding/myjava/sqlite-jdbc-3.8.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
